--- a/static/index.html
+++ b/static/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
   <button id="click">添加</button>
+  <div class="drag-box" style='width:100px;height:100px;border:1px solid green;'>
+  </div>
 </body>
 </html>
