--- a/static/index.html
+++ b/static/index.html
@@ -7,8 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <button id="click">添加</button>
-  <div class="drag-box" style='width:100px;height:100px;border:1px solid green;'>
-  </div>
+<div id="root"></div>
 </body>
 </html>
