--- a/create/index.html
+++ b/create/index.html
@@ -7,6 +7,7 @@
   <title>Create Observable</title>
 </head>
 <body>
+  <button id='click-btn'>Click Me!</button>
   <script src='./index.js'></script>
 </body>
 </html>
