Add ajax repeat

--- a/create/ajax/index.html
+++ b/create/ajax/index.html
@@ -10,6 +10,7 @@
 <body>
   <div id="root"></div>
   <button class="ajax-btn">Click Me</button>
+  <button class="repeat-btn">Repeat</button>
   <script src="./index.js"></script>
 </body>
 </html>
