--- a/combine/index.html
+++ b/combine/index.html
@@ -7,8 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-
-  <button class="debounce-btn">Debounce</button>
-  <script src="./index.js"></script>
+  <div id='root'></div>
+  <script src='./index.js'></script>
 </body>
 </html>
